# Lab3

./: Makefile  README.md  main.cpp  run_test.sh
MathCalculator/: CMakeLists.txt
MathCalculator/include/: ast.hpp  lexer.hpp  parser.hpp  utils.hpp
MathCalculator/src/: ast.cpp  lexer.cpp  main.cpp  parser.cpp  utils.cpp
MathCalculator/tests/: test_main.cpp
secondvariant/: CMakeLists.txt
